--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <style>
       .material-symbols-rounded {
         font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 48;
+        color: #454545;
       }
     </style>
   </head>
